--- a/web-ui/package.json
+++ b/web-ui/package.json
@@ -13,6 +13,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "concurrently": "^9.1.2",
+    "framer-motion": "^12.11.0",
     "lucide-react": "^0.488.0",
     "next": "15.3.0",
     "react": "^19.0.0",
